--- a/custom_components/virtual_keys/manifest.json
+++ b/custom_components/virtual_keys/manifest.json
@@ -1,6 +1,9 @@
 {
     "domain": "virtual_keys",
     "name": "Virtual Keys",
+    "documentation": "https://github.com/kcsoft/virtual-keys",
+    "issue_tracker": "https://github.com/kcsoft/virtual-keys/issues",
+    "codeowners": ["kcsoft"],
     "iot_class": "local_push",
     "version": "0.2.0"
 }
