--- a/custom_components/virtual_keys/manifest.json
+++ b/custom_components/virtual_keys/manifest.json
@@ -1,9 +1,9 @@
 {
-    "domain": "virtual_keys",
-    "name": "Virtual Keys",
-    "codeowners": ["@kcsoft"],
-    "documentation": "https://github.com/kcsoft/virtual-keys",
-    "iot_class": "local_push",
-    "issue_tracker": "https://github.com/kcsoft/virtual-keys/issues",
-    "version": "0.2.0"
+  "domain": "virtual_keys",
+  "name": "Virtual Keys",
+  "codeowners": ["@kcsoft", "@marcbodea"],
+  "documentation": "https://github.com/marcbodea/virtual-keys",
+  "iot_class": "local_push",
+  "issue_tracker": "https://github.com/marcbodea/virtual-keys/issues",
+  "version": "0.2.1"
 }
