--- a/custom_components/virtual_keys/manifest.json
+++ b/custom_components/virtual_keys/manifest.json
@@ -2,8 +2,8 @@
   "domain": "virtual_keys",
   "name": "Virtual Keys",
   "codeowners": ["@kcsoft", "@marcbodea"],
-  "documentation": "https://github.com/marcbodea/virtual-keys",
+  "documentation": "https://github.com/kcsoft/virtual-keys",
   "iot_class": "local_push",
-  "issue_tracker": "https://github.com/marcbodea/virtual-keys/issues",
+  "issue_tracker": "https://github.com/kcsoft/virtual-keys/issues",
   "version": "0.2.1"
 }
