--- a/custom_components/virtual_keys/manifest.json
+++ b/custom_components/virtual_keys/manifest.json
@@ -1,9 +1,11 @@
 {
-    "domain": "virtual_keys",
-    "name": "Virtual Keys",
-    "codeowners": ["@kcsoft"],
-    "documentation": "https://github.com/kcsoft/virtual-keys",
-    "iot_class": "local_push",
-    "issue_tracker": "https://github.com/kcsoft/virtual-keys/issues",
-    "version": "0.3.0"
+  "domain": "virtual_keys",
+  "name": "Virtual Keys",
+  "codeowners": ["@kcsoft"],
+  "config_flow": true,
+  "documentation": "https://github.com/kcsoft/virtual-keys",
+  "iot_class": "local_push",
+  "issue_tracker": "https://github.com/kcsoft/virtual-keys/issues",
+  "single_config_entry": true,
+  "version": "0.5.0"
 }
